# creatures

./: .env.example  .gitignore  Cargo.toml
analysis/: analysis.ipynb  pyproject.toml
src/: brain.rs  config.rs  creature.rs  logging.rs  main.rs  mlp.rs  sense.rs  simulation.rs  utils.rs  visualization.rs  zoo.rs
tests/: mlp_finite_output.rs
