[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
